--- a/styles.css
+++ b/styles.css
@@ -21,9 +21,19 @@ body {
     border-radius: 0 0 1rem 1rem;
 }
 
+.disclaimer-line {
+    display: block;
+    margin: 2rem auto;
+    margin-bottom: 0;
+    font-weight: 100;
+    text-align: center;
+    max-width: 80%;
+}
+
 .input-heading {
     text-align: center;
     padding: 2rem;
+    margin: 0;
 }
 
 #input-date {
@@ -48,6 +58,7 @@ body {
     background-color: var(--primary-color);
     color: white;
     font-size: 1.2rem;
+    cursor: pointer;
 }
 
 #error-message {
